# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-02-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service_queue for persistent queuing of
      service requests

2014-02-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweak syslog integration
    * Allow SSL files for cloudi_service_http_cowboy to be configured with
      environment variables that are expanded
      (separate SSL files can not yet be specified until Erlang/OTP changes
       (http://erlang.org/pipermail/erlang-questions/2013-October/075814.html))

2014-02-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add syslog logging support

2014-02-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.3.1 (beta) released
    * Update cpg, key2value, pqueue, quickrand, reltool_util, service,
      trie, uuid after version bump and docs update
    * Fixed C/C++ CloudI API binary key/value parsing for request_info data
    * Fixed binary key/value parsing in cloudi_service_http_cowboy and
      cloudi_service_http_elli
    * Fixed cloudi_service_filesystem

2014-01-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:environment_lookup/0,
      cloudi_service:environment_transform/1, and
      cloudi_service:environment_transform/2
    * Allow the cloudi_service_filesystem directory configuration value
      to use environment variables
    * Update edoc documentation

2014-01-24 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the cloudi_service_api:priority() type
    * Add the service Erlang application with an autoconf commandline option
      to exclude it (for if it would cause a module name conflict)
    * Add the hello_world5 example

2014-01-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add source-address and source-port to the RequestInfo provided by
      cloudi_service_http_cowboy to provide the same format as