@@ -154,7 +154,7 @@
         % if the destination deny list is 'undefined' any destination is valid.
         % a blocked request will just return a timeout
         % (earlier than the timeout specified for the request).
-        [api],
+        [api], % with 'none' destination refresh method, this is not checked
         % destination allow list is used as an ACL (Access Control List) that
         % allows the process to send to destinations with the specified
         % prefixes.  if atoms are used within the list, they must exist as an
@@ -208,7 +208,7 @@
     %     {port, 5432},
     %     {database, "cloudi_tests"}],
     %    none,
-    %    5000, 5000, 5000, [api], undefined, 1, 5, 300, []},
+    %    5000, 5000, 5000, undefined, undefined, 1, 5, 300, []},
     % the service below provides a queue for specific database queries
     {internal,
         "/db/pgsql/",
@@ -260,9 +260,19 @@
     {internal,
         "/queue",
         cloudi_service_queue,
-        [{file, "../../var/log/cloudi/example_queue_${I}.log"}],
+        [% a maximum of 3 retries will occur if the service request
+         % fails to receive a response within the timeout period
+         % (e.g., the destination service crashes without providing a response)
+         {retry, 3},
+         % a write ahead logging (WAL) file path for all requests
+         % (n.b., for efficiency reasons all requests are also held in memory)
+         {file, "../../var/log/cloudi/example_queue_${I}.log"}],
         immediate_closest,
-        5000, 5000, 5000, undefined, undefined, 4, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 4, 5, 300,
+        % make sure the cloudi_service_queue gets a timeout as
+        % quickly as possible to allow it to retry
+        [{request_timeout_immediate_max, 0},
+         {response_timeout_immediate_max, 0}]},
     {internal,
         "/byzantine",
         cloudi_service_quorum,
@@ -275,33 +285,33 @@
         "tests/http/service/service.py",
         [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 4, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 1, 4, 5, 300, []},
     {external,
         "/tests/http/",
         "@JAVA@",
         "-jar tests/http/service/jar/service.jar", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 4, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 1, 4, 5, 300, []},
     {external,
         "/tests/http/",
         "@RUBY@",
         "tests/http/service/service.rb", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 4, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 1, 4, 5, 300, []},
     {external,
         "/tests/http_req/",
         "tests/http_req/priv/http_req", "",
         [{"LD_LIBRARY_PATH", "api/c/lib/"},
          {"DYLD_LIBRARY_PATH", "api/c/lib/"}],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
         "@RUBY@",
         "tests/http_req/http_req.rb", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
@@ -309,7 +319,7 @@
         "tests/http_req/http_req.py",
         [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{request_timeout_adjustment, true}]},
     {external,
         "/tests/http_req/",
@@ -317,7 +327,7 @@
         "tests/http_req/http_req_c.py",
         [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined,
+        5000, 5000, 5000, undefined, undefined,
         1.0, 1, 5, 300,
         [{request_timeout_adjustment, true},
          {count_process_dynamic,
@@ -330,7 +340,7 @@
         "@JAVA@",
         "-jar tests/http_req/jar/http_req.jar", [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300,
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
         [{request_timeout_adjustment, true}]},
     {internal,
         "/tests/http_req/",
@@ -338,7 +348,7 @@
         [],
         none,
         4294967195, 4294967195, 4294967195, % test limits
-        [api], undefined, 1.0, 5, 300,
+        undefined, undefined, 1.0, 5, 300,
         [{request_timeout_adjustment, true},
          {hibernate,
           [{rate_request_min, 0.9}]},
@@ -353,7 +363,7 @@
         [],
         none,
         101, 101, 101, % test limits
-        [api], undefined, 1.0, 5, 300,
+        undefined, undefined, 1.0, 5, 300,
         [{request_timeout_adjustment, true},
          {hibernate,
           [{rate_request_min, 0.9}]},
@@ -383,14 +393,25 @@
          {refresh, 5} % seconds
          ],
         none,
-        5000, 5000, 5000, [api], undefined, 1, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 1, 5, 300, []},
+    % normal echo in python
     {external,
         "/tests/",
         "@PYTHON@",
         "tests/echo/echo.py",
         [],
         none, tcp, default,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300, []},
+    % unstable 50% chance (coin toss) echo in python
+    {external,
+        "/tests/coin/",
+        "@PYTHON@",
+        "tests/echo/echo.py",
+        [],
+        none, tcp, default,
+        5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300,
+        % give this service instance a 50% of failure on a service request
+        [{monkey_chaos, [{probability_request, 0.5}]}]},
     {external,
         "/tests/websockets/",
         "@PYTHON@",
@@ -924,26 +945,26 @@
     %    "tests/flood/service/flood.py",
     %    [],
     %    none, tcp, default,
-    %    5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+    %    5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300, []},
     %{external,
     %    "/tests/flood/",
     %    "@JAVA@",
     %    "-jar tests/flood/service/jar/flood.jar", [],
     %    none, tcp, default,
-    %    5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+    %    5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300, []},
     %{external,
     %    "/tests/flood/",
     %    "@RUBY@",
     %    "tests/flood/service/flood.rb", [],
     %    none, tcp, default,
-    %    5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+    %    5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300, []},
     %{external,
     %    "/tests/flood/",
     %    "tests/flood/service/flood", "",
     %    [{"LD_LIBRARY_PATH", "api/c/lib/"},
     %     {"DYLD_LIBRARY_PATH", "api/c/lib/"}],
     %    none, tcp, default,
-    %    5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+    %    5000, 5000, 5000, undefined, undefined, 1, 1, 5, 300, []},
     %{internal,
     %    "/tests/flood/",
     %    cloudi_service_flood,
